--- a/www/index.html
+++ b/www/index.html
@@ -23,8 +23,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/controllers/AppController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/PatientController.js"></script>
+    <script src="js/controllers/CabinetController.js"></script>
     <script src="js/services/appService.js"></script>
     <script src="lib/angular-locale_fr-fr.js"></script>
   </head>
