--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/angular-pickadate.css" rel="stylesheet" >
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -17,6 +18,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+       <script src="lib/angular-pickadate.min.js"></script>
     <script src="lib/ngstorage/ngStorage.min.js"></script>
     <script src="cordova.js"></script>
 
@@ -27,8 +29,10 @@
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/controllers/PatientController.js"></script>
     <script src="js/controllers/CabinetController.js"></script>
+    <script src="js/controllers/TourneesController.js"></script>
     <script src="js/services/appService.js"></script>
     <script src="lib/angular-locale_fr-fr.js"></script>
+ 
   </head>
 
   <body ng-app="starter">
